dev-ops/deployment_scripts/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: api-ingress
  labels:
    name: api-ingress
spec:
  rules:
  - host: sgse2.ad.fh-bielefeld.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx #Hier kommt das Frontend rein
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/echo"
        backend:
          service:
            name: echo-service
            port: 
              number: 8080
      - pathType: Prefix
        path: "/api/express-test/?(.*)"
        backend:
          service:
            name: express-test-service
            port: 
              number: 3000
